--- a/kube-deployment.yml
+++ b/kube-deployment.yml
@@ -84,9 +84,10 @@ spec:
     - port: 8081
       targetPort: 80
       name: web
+      nodePort: 31100
   selector:
     app: words-web
-  type: LoadBalancer
+  type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
