--- a/kube-deployment.yml
+++ b/kube-deployment.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: db
-        image: dockersamples/k8s-wordsmith-db
+        image: tagii/k8s-wordsmith-db
         ports:
         - containerPort: 5432
           name: db
@@ -68,7 +68,7 @@ spec:
     spec:
       containers:
       - name: words
-        image: dockersamples/k8s-wordsmith-api
+        image: tagii/k8s-wordsmith-api
         ports:
         - containerPort: 8080
           name: api
@@ -106,7 +106,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: dockersamples/k8s-wordsmith-web
+        image: tagii/k8s-wordsmith-web
         ports:
         - containerPort: 80
           name: words-web
